[INVENTORY] finalizando criacao e exibicao de inventory